--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.43.4",
         "sass-loader": "^12.3.0"
+    },
+    "dependencies": {
+        "puppeteer": "^24.37.5"
     }
 }
