modificado retirado puptwer e google chroumin  e instalado o firefox

--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
         "sass-loader": "^12.3.0"
     },
     "dependencies": {
-        "puppeteer": "^24.37.5"
+        "playwright": "^1.58.2"
     }
 }
