Removendo navegadores e limpando repositório para nova estratégia

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,6 @@ venv/
 *.zip
 storage/app/public/lojas/
 storage/app/public/produtos_full/
-public/phpmyadmin/
+public/phpmyadmin/playwright-browsers/
+playwright-browsers/
+playwright-browsers/
